--- a/hw_js_13/src/templates/template.hbs
+++ b/hw_js_13/src/templates/template.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <div class="photo-card">
-    <img class="img" src="{{webformatURL}}" data-source="{{largeImageURL}}" alt="" />
+    <img class="img" src="{{webformatURL}}" data-source="{{largeImageURL}}" width="400" height="250" alt="" />
     <div class="stats">
         <p class="stats-item">
             <i class="material-icons">thumb_up</i>
@@ -8,7 +8,7 @@
         </p>
         <p class="stats-item">
             <i class="material-icons">visibility</i>
-           {{views}}
+            {{views}}
         </p>
         <p class="stats-item">
             <i class="material-icons">comment</i>
